[AI Fix] (a11y ADA compliance): darken post meta and footer org-name text for AA contrast

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -225,19 +225,19 @@
 
 .post-meta {
   font-size: $small-font-size;
-  color: #767676;
+  color: #757575;
 }
 
 .post-meta .dt-published {
-  color: #767676;
+  color: #757575;
 }
 
 .post-meta .p-author {
-  color: #767676;
+  color: #757575;
 }
 
 .footer-col .p-name {
-  color: #767676;
+  color: #757575;
 }
 
 .footer-col .u-email {
